<resources>
    <string name="app_name">ProjectPlanner</string>
    <string name="under_construction">Oops this feature is still under development ):</string>
    <string name="signed_out">You are currently signed out, login or create a new account.  Make sure your password is at least 6 characters long.</string>
    <string name="emailpassword_title_text">Login via Email</string>
    <string name="loading">Loading\.\.\.</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="critical_duration_fmt">Critical Duration: %s</string>
    <string name="duration_fmt">Duration: %s</string>
    <string name="title_duration">Duration:</string>
    <string name="title_events">Events</string>
    <string name="title_critical_events">Critical Events</string>
    <string name="title_dependencies">Dependencies</string>
    <string name="title_new_event">New Event</string>
    <string name="title_new_project">New Project</string>
    <!-- hints -->
    <string name="hint_new_project_enter_name">Enter project name</string>
    <string name="hint_new_event_enter_name">Enter event name</string>
    <string name="hint_enter_email">Email</string>
    <string name="hint_enter_password">Password</string>
    <!-- buttons -->
    <string name="button_send">Send</string>
    <string name="button_create">Create</string>
    <string name="button_edit">Edit</string>
    <string name="button_change">Change</string>
    <string name="button_next">Next</string>
    <string name="button_new_project">New Project</string>
    <string name="button_my_projects">My Projects</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="button_create_account">Create Account</string>
    <string name="button_verify_email">Verify Email</string>
    <string name="button_add_event">Add Event</string>
    <string name="button_add_dependency">Add</string>
    <string name="button_remove_dependency">Remove</string>
    <string name="button_critical_path">Critical Path</string>
    <string name="button_manage_project">Manage Project</string>
    <!-- dialog -->
    <string name="dialog_choose_duration_title">Choose Duration:</string>
    <!-- descriptions -->
    <string name="description_main">Welcome to ProjectPlanner the App.  A simple project management app that calculates the critical path of any one of your many projects! Get started by signing in with a valid email.</string>
    <string name="logo_description">ProjectPlanner logo</string>
    <string name="description_signed_in">Hello %s</string>
    <string name="description_list_projects">Manage your existing projects.</string>
    <string name="description_manage_project">Manage events for a specific project.</string>
    <string name="description_new_event">Create a new event for a specific project.</string>
    <string name="description_new_project">Create a new project.</string>

</resources>
