<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nate.projectplanner.NewEventActivity">

    <ImageView
        android:id="@+id/imageView"

        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/icon2"
        style="@style/LogoFormat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <EditText
            android:id="@+id/edittext_new_event_name"
            android:hint="@string/hint_new_event_enter_name"
            android:inputType="text"
            style="@style/ThemeOverlay.HorizontalField"/>

        <Button
            android:id="@+id/button_create_new_event"
            android:text="@string/button_create"
            android:onClick="createNewEvent"
            style="@style/ThemeOverlay.HorizontalButton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
