<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nate.projectplanner.ProjectHomeActivity">

    <ImageView
        android:id="@+id/imageView"

        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/icon2"
        style="@style/LogoFormat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_project_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="46dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <Button
            android:id="@+id/button_critical_path"
            android:layout_width="395dp"
            android:layout_height="80dp"
            android:textSize="22sp"
            android:onClick="calculateCriticalPath"
            android:text="@string/button_critical_path"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/button_manage_project"
            android:layout_width="395dp"
            android:layout_height="80dp"
            android:textSize="22sp"
            android:onClick="manageProject"
            android:text="@string/button_manage_project"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
