<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nate.projectplanner.ManageEventActivity">

    <ImageView
        android:id="@+id/imageView"

        android:contentDescription="@string/logo_description"
        app:srcCompat="@drawable/icon2"
        style="@style/LogoFormat"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_event_name"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1.0"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="46dp" />
        <View
            style="@style/Divider"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/body"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="60dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_duration_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/title_duration"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                style="@style/WhiteEditHint"
            />
            <TextView
                android:id="@+id/textview_duration"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:background="@drawable/border"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <Button
                android:id="@+id/button_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/button_edit"
                android:textAlignment="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:onClick="setDuration"
                />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textview_dependencies"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1.0"
            android:text="@string/title_dependencies"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/WhiteEditHint"/>
        <ListView
            android:id="@+id/list_events"
            android:layout_width="fill_parent"
            android:layout_height="340dp"
            android:layout_weight="1.0"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/button_add_dependency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:onClick="addDependency"
            android:text="@string/button_add_dependency"
            android:theme="@style/ThemeOverlay.MyLightButton"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
